force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_Setting__mdt/ucinn_ascendv2__Gift_Processing_Setting__mdt.object-meta.xml
<CustomObject>
    <description>For settings that pertain to gift processing in general.</description>
    <label>Gift Processing Setting</label>
    <pluralLabel>Gift Processing Settings</pluralLabel>
</CustomObject>