force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_Setting__mdt/fields/ucinn_ascendv2__Account_Number_Storage_Method__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Account_Number_Storage_Method__c</fullName>
    <inlineHelpText>Determines how ascend stores Bank Routing and Account Number for ACH transactions.
No Storage: {no information is stored - best option}
Masked &amp; Unencrypted: ******7890 - acceptable option
Unmasked &amp; Unencrypted: 1234567890 - worst option</inlineHelpText>
    <label>Account Number Storage Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Storage</fullName>
                <default>true</default>
                <label>No Storage</label>
            </value>
            <value>
                <fullName>Masked &amp; Unencrypted</fullName>
            </value>
            <value>
                <fullName>Unmasked &amp; Unencrypted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>