force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_Setting__mdt/fields/ucinn_ascendv2__Account_Number_Storage_Mthd_Conf_Phrase__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Account_Number_Storage_Mthd_Conf_Phrase__c</fullName>
    <inlineHelpText>If you opt to store Unmasked &amp; Unencrypted ACH / Direct Debit Account Numbers in ascend, you put type exactly &quot;I confirm Unmasked _&amp;AND&amp;_ Unencrypted ACH / Direct Debit Account Numbers in ascend.&quot; into this field.</inlineHelpText>
    <label>Account Number Storage Mthd Conf Phrase</label>
    <length>255</length>
    <type>Text</type>
</CustomField>