force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_Setting__mdt/fields/ucinn_ascendv2__Account_Number_Unmasked_View_Length__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Account_Number_Unmasked_View_Length__c</fullName>
    <defaultValue>&apos;4&apos;</defaultValue>
    <inlineHelpText>Determines how much of the Account Number field is unmasked for view. For example, if the Account Number is 123456790: 1: *********0, 2: ********90, 3: *******890, 4: ******7890. Shorter ACH / Direct Debit account numbers should display fewer visible digits. For example: ****0, ***90.</inlineHelpText>
    <label>Account Number Unmasked View Length</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>