force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_Setting__mdt/fields/ucinn_ascendv2__Adjustment_History_Columns__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Adjustment_History_Columns__c</fullName>
    <inlineHelpText>JSON string to override adjustment history table columns.

Ex:
[ { &quot;fieldName&quot;: &quot;Name&quot; },
  { &quot;label&quot;: &quot;Adjustment Type&quot;,
     &quot;fieldName&quot;: &quot;Adjustment_Type__c&quot; }
]</inlineHelpText>
    <label>Adjustment History Columns (DEPR)</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>