force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_Setting__mdt/fields/ucinn_ascendv2__Auto_Apply_Opp_Hard_Soft_Credits__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Auto_Apply_Opp_Hard_Soft_Credits__c</fullName>
    <inlineHelpText>Transaction Types that will auto apply manual credits from the parent opportunity. Use any combination of &quot;Pledge Payment&quot; , &quot;Recurring Gift Payment&quot;, &quot;Matching Gift Payment&quot;, &quot;Auto Renewing Membership Payment&quot;, &quot;Installment Based Membership Payment&quot;, &quot;Auto Renewing POS Payment&quot;, &quot;Installment Based POS Payment&quot;, &quot;&quot;Partial Payment POS Payment&quot; delimited by &quot;;&quot;.</inlineHelpText>
    <label>Auto Apply Opp Hard/Soft Credits</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>