force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_Setting__mdt/fields/ucinn_ascendv2__Auto_Calculation_Setting__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Auto_Calculation_Setting__c</fullName>
    <description>Configures auto calculation on amount fields</description>
    <inlineHelpText>Enabled
Disabled
Provide Option</inlineHelpText>
    <label>Auto Calculation Setting</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>