force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_Setting__mdt/fields/ucinn_ascendv2__Batchify_Library_Name__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Batchify_Library_Name__c</fullName>
    <description>Name of the Library where we are storing the Batchify csv files.</description>
    <inlineHelpText>Name of the Library where we are storing the Batchify csv files.</inlineHelpText>
    <label>Batchify Library Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>