force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_Setting__mdt/fields/ucinn_ascendv2__Batchify_Processing_Threshold__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Batchify_Processing_Threshold__c</fullName>
    <description>When loading data through the file uploader in Batchify. This is the threshold for how many records from that file will be processed at the same time.</description>
    <inlineHelpText>When loading data through the file uploader in Batchify. This is the threshold for how many records from that file will be processed at the same time.</inlineHelpText>
    <label>xGP Batch Processing Threshold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>