force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_Setting__mdt/fields/ucinn_ascendv2__Boolean_Field_To_Check_for_DTD_Exclusion__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Boolean_Field_To_Check_for_DTD_Exclusion__c</fullName>
    <description>This field on the Payment record, if true, will determine if the record is to be excluded from the DTD integration.</description>
    <inlineHelpText>This field on the Payment record, if true, will determine if the record is to be excluded from the DTD integration.</inlineHelpText>
    <label>Boolean Field To Check for DTD Exclusion</label>
    <length>60</length>
    <type>Text</type>
</CustomField>