force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_Setting__mdt/fields/ucinn_ascendv2__Contact_Donor_Information_Field_Map__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Contact_Donor_Information_Field_Map__c</fullName>
    <description>Configuration pertaining to the constituent donor fields shown for transaction entry.</description>
    <inlineHelpText>Configuration pertaining to the constituent donor fields shown for transaction entry.</inlineHelpText>
    <label>Constituent Donor Information Field Map</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>