force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_Setting__mdt/fields/ucinn_ascendv2__Convert_Pledge_Overpayments_to_Gifts__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Convert_Pledge_Overpayments_to_Gifts__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allows for processes to convert pledge overpayments to outright gift records.</description>
    <inlineHelpText>Allows for processes to convert pledge overpayments to outright gift records.</inlineHelpText>
    <label>Convert Pledge Overpayments to Gifts</label>
    <type>Checkbox</type>
</CustomField>