force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_Setting__mdt/fields/ucinn_ascendv2__Create_SC_For_Relationship_on_MG__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Create_SC_For_Relationship_on_MG__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Check this box to allow for the spouse and other relationships to automatically receive soft credit for matching gifts in the generation of matching gifts as well as the calculate hard and soft credit button. This includes Donor Control enabled affiliated constituent relationships to the organization.</description>
    <inlineHelpText>Include soft credits for relationships on matching gift generation and during matching gift payments</inlineHelpText>
    <label>Create SC For Relationship on MG</label>
    <type>Checkbox</type>
</CustomField>