force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_Setting__mdt/fields/ucinn_ascendv2__Custom_Display_Positions__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Custom_Display_Positions__c</fullName>
    <description>Describes where the custom display will render on the Gift Processing page.</description>
    <inlineHelpText>Ex:{&quot;Opportunity&quot;:{&quot;Gift&quot;:&quot;Inside Opp Info&quot;}}. To use the same customization to all Opportunities, omit record type map.Options: (Above/Inside/Below) Opp Info for Opportunity.</inlineHelpText>
    <label>Custom Display Positions</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>