force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_Setting__mdt/fields/ucinn_ascendv2__Custom_Display_Titles__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Custom_Display_Titles__c</fullName>
    <description>Specify the collection title for the custom display.</description>
    <inlineHelpText>Ex: {&quot;Opportunity&quot;:{&quot;Gift&quot;:&quot;Test Title&quot;}}.To use the same customization for all Opportunities, omit record type map. Leave this field or omit key-value if none have titles.</inlineHelpText>
    <label>Custom Display Titles</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>