force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_Setting__mdt/fields/ucinn_ascendv2__DCO_Batch_Processing_Threshold__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__DCO_Batch_Processing_Threshold__c</fullName>
    <description>If the number of DCO soft credits is above the threshold, then all the soft credits will be combined into one line in the gift processing screen. Also, a batch will be used to create the soft credits.</description>
    <inlineHelpText>If the number of DCO soft credits is above the threshold, then all the soft credits will be combined into one line in the gift processing screen. Also, a batch will be used to create the soft credits.</inlineHelpText>
    <label>DCO Batch Processing Threshold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>