force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_Setting__mdt/fields/ucinn_ascendv2__Default_Field_Value_Mapping__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Default_Field_Value_Mapping__c</fullName>
    <description>Configuration pertaining to the fields to populate by default when creating a new transaction.</description>
    <inlineHelpText>Configuration pertaining to the fields to populate by default when creating a new transaction.</inlineHelpText>
    <label>Default Field Value Mapping</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>