force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_Setting__mdt/fields/ucinn_ascendv2__Default_View_Type__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Default_View_Type__c</fullName>
    <description>Defaults the view type on the Main Gift Processing page. When choosing matching, only organizations will default to matching; constituents will default to pledge.</description>
    <inlineHelpText>Defaults the view type on the Main Gift Processing page. When choosing matching, only organizations will default to matching; constituents will default to pledge.</inlineHelpText>
    <label>Default View Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pledge</fullName>
                <default>true</default>
                <label>Pledge</label>
            </value>
            <value>
                <fullName>Gift</fullName>
            </value>
            <value>
                <fullName>Recurring</fullName>
            </value>
            <value>
                <fullName>Matching</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>