force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_Setting__mdt/fields/ucinn_ascendv2__Designation_Detail_to_Membership_Mapping__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Designation_Detail_to_Membership_Mapping__c</fullName>
    <label>Membership to Designation Detail Mapping</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>