force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_Setting__mdt/fields/ucinn_ascendv2__Designation_Mapping__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Designation_Mapping__c</fullName>
    <label>Designation Mapping</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>