force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_Setting__mdt/fields/ucinn_ascendv2__DTD_Connect_Matching_Org_Account__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__DTD_Connect_Matching_Org_Account__c</fullName>
    <description>Enter the default DTD account API name associated with Double the Donation account you want to be used when using the action &quot;Connect Matching Org.&quot;</description>
    <inlineHelpText>Enter the default DTD account API name associated with Double the Donation account you want to be used when using the action &quot;Connect Matching Org.&quot;</inlineHelpText>
    <label>Default DTD Connect Matching Org Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>