force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_Setting__mdt/fields/ucinn_ascendv2__Enable_Double_the_Donation__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Enable_Double_the_Donation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable Double the Donation Integration to register donations to Double the Donation through payments made.</description>
    <label>Enable Double the Donation</label>
    <type>Checkbox</type>
</CustomField>