force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_Setting__mdt/fields/ucinn_ascendv2__Enable_Encrypted_Payment_Information__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Enable_Encrypted_Payment_Information__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enables ability to input encrypted payment information using a PCI compliant device.</description>
    <inlineHelpText>Enables ability to input encrypted payment information using a PCI compliant device.</inlineHelpText>
    <label>Enable Encrypted Payment Information</label>
    <type>Checkbox</type>
</CustomField>