force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_Setting__mdt/fields/ucinn_ascendv2__Enable_Membership_Purchasing__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Enable_Membership_Purchasing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Membership Purchasing</label>
    <type>Checkbox</type>
</CustomField>