force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_Setting__mdt/fields/ucinn_ascendv2__Enable_Multi_Currency__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Enable_Multi_Currency__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field controls whether ascend invokes its Multi-Currency logic. Salesforce Multi-Currency also needs to be activated for this setting to take effect.</description>
    <inlineHelpText>If True, ascend Multi-Currency feature is activated.</inlineHelpText>
    <label>Enable ascend Multi-Currency</label>
    <type>Checkbox</type>
</CustomField>