force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_Setting__mdt/fields/ucinn_ascendv2__Enable_Multiple_DTD_Accounts__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Enable_Multiple_DTD_Accounts__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in DTD Required validation rule. When true, enables the validation rule requiring a picklist value to be selected. Otherwise, picklist value is not required and existing Double the Donation credentials are used.</description>
    <inlineHelpText>True, enables validation rule the requires Select Double The Donation Account picklist value. False, disables validation rule.</inlineHelpText>
    <label>Enable Multiple DTD Accounts</label>
    <type>Checkbox</type>
</CustomField>