force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_Setting__mdt/fields/ucinn_ascendv2__Enable_Point_of_Sale__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Enable_Point_of_Sale__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Point of Sale</label>
    <type>Checkbox</type>
</CustomField>