force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_Setting__mdt/fields/ucinn_ascendv2__Enable_UBE_Processing__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Enable_UBE_Processing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable Unified Business Engine</description>
    <inlineHelpText>If True, the latest UBE backend logic is used to process transactions.</inlineHelpText>
    <label>Enable UBE Processing</label>
    <type>Checkbox</type>
</CustomField>