force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_Setting__mdt/fields/ucinn_ascendv2__Enforce_Membership_Posted_Amount_Check__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Enforce_Membership_Posted_Amount_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enforce Membership Posted Amount Check</label>
    <type>Checkbox</type>
</CustomField>