force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_Setting__mdt/fields/ucinn_ascendv2__Expedited_Bio_Related_List__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Expedited_Bio_Related_List__c</fullName>
    <description>JSON string to display bio related lists on the Expedited Gift Processing Details tab.</description>
    <inlineHelpText>JSON string to display bio related lists on the Expedited Gift Processing Details tab.
Maps object to list of related lists to display for that object
ex) {&quot;Contact&quot;: [{ &quot;label&quot;: &quot;Phones&quot;,&quot;relatedList&quot;: &quot;c:RelatedList_Phone&quot;}], &quot;Account&quot;: ...}</inlineHelpText>
    <label>Expedited Bio Related List</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>