force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_Setting__mdt/fields/ucinn_ascendv2__Feature_to_Custom_Permission_Map__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Feature_to_Custom_Permission_Map__c</fullName>
    <label>Feature to Custom Permission Map</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>