force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_Setting__mdt/fields/ucinn_ascendv2__Fields_to_Exclude_from_Cloning__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Fields_to_Exclude_from_Cloning__c</fullName>
    <description>List of fields to exclude from cloning for UBE adjustments.</description>
    <inlineHelpText>If you wish to exclude any fields from being cloned during the adjustment process, identify them in this field.</inlineHelpText>
    <label>Fields to Exclude from Cloning</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>