force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_Setting__mdt/fields/ucinn_ascendv2__Generate_Joint_Membership__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Generate_Joint_Membership__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Generate Joint Membership</label>
    <type>Checkbox</type>
</CustomField>