force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_Setting__mdt/fields/ucinn_ascendv2__Giving_Summary_Campaign_Appeal__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Giving_Summary_Campaign_Appeal__c</fullName>
    <description>The campaign names(s) used to total up the campaign fundraising and cash totals in the constituent/organization overview page and the giving details page.  For more than one appeal, separate appeal names with a semicolon.</description>
    <inlineHelpText>The campaign names(s) used to total up the campaign fundraising and cash totals in the constituent/organization overview page and the giving details page.  For more than one appeal, separate appeal names with a semicolon.</inlineHelpText>
    <label>Giving Summary Campaign Appeal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>